bk_ida/gobmkida/c1/mark_inessential_stones
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/mark_inessential_stones/src/engine/dragon.c:1600:18: error: use of undeclared identifier 'dword_9DF084'
safety = dragon2[dword_9DF084[v3 / 4]].safety; 
                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/mark_inessential_stones/src/obj/1/dragon.o] Error 1
